--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 django = "^5.1.7"
 python-dotenv = "^1.0.1"
 djangorestframework = "^3.15.2"
+pillow = "^11.1.0"
+psycopg2-binary = "^2.9.10"
 
 
 [build-system]
